<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conversation_background"
    tools:context=".ui.FirstSettingsSetupFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/first_settings_setup_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/first_setup_margin_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/first_settings_setup_skip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/first_settings_setup_tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/first_setup_margin_24"
        android:background="@android:color/transparent"
        app:tabBackground="@drawable/first_settings_view_pager_tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/first_settings_setup_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/first_setup_margin_24"
            android:layout_marginStart="@dimen/first_setup_margin_24"
            android:text="@string/skip_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TransparentButton" />

        <Button
            android:id="@+id/first_settings_setup_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/first_setup_margin_24"
            android:layout_marginEnd="@dimen/first_setup_margin_24"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/BlueButton" />

        <Button
            android:id="@+id/first_settings_setup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/first_setup_margin_24"
            android:layout_marginStart="@dimen/first_setup_margin_24"
            android:text="@string/back_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TransparentButton" />

        <Button
            android:id="@+id/first_settings_setup_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/first_setup_margin_24"
            android:layout_marginEnd="@dimen/first_setup_margin_24"
            android:text="@string/done_button"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/BlueButton" />

</androidx.constraintlayout.widget.ConstraintLayout>