<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/first_setup_margin_32">

    <TextView
        android:id="@+id/first_settings_setup_auto_play_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_56"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_size_24"
        android:text="@string/first_launch_settings_assistants_auto_speech"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/first_settings_setup_auto_play_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_24"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_14"
        android:text="@string/first_launch_settings_assistants_auto_speech_text"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_auto_play_header_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/first_settings_setup_auto_play_auto_start_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_32"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_size_16"
        android:text="@string/first_launch_settings_assistants_auto_speech_auto_start"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_auto_play_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/first_settings_setup_auto_play_auto_speech_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:theme="@style/SwitchStyle"
        app:layout_constraintTop_toTopOf="@+id/first_settings_setup_auto_play_auto_start_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/first_settings_setup_auto_play_auto_start_text_view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/first_settings_setup_auto_play_full_article_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_32"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_size_16"
        android:text="@string/first_launch_settings_assistants_auto_speech_full_article"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_auto_play_auto_start_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/first_settings_setup_auto_play_full_article_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:theme="@style/SwitchStyle"
        app:layout_constraintTop_toTopOf="@+id/first_settings_setup_auto_play_full_article_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/first_settings_setup_auto_play_full_article_text_view"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>