<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/first_setup_margin_32">

    <TextView
        android:id="@+id/first_settings_setup_voice_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_56"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/main_text"
        android:textSize="@dimen/text_size_24"
        android:text="@string/first_launch_settings_assistants_voice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/first_settings_setup_voice_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_24"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_14"
        android:text="@string/first_launch_settings_assistants_voice_choice_text"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_voice_header_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/first_settings_setup_voice_male_linear_layout"
        android:layout_width="@dimen/first_setup_radio_button_linear_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_32"
        android:layout_marginEnd="@dimen/first_setup_margin_8"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/first_settings_setup_radio_button_background"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_voice_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/first_settings_setup_voice_female_linear_layout">

        <TextView
            android:id="@+id/first_settings_setup_voice_male_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/first_setup_margin_24"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_14"
            android:text="@string/settings_section_voice_male" />

        <RadioButton
            android:id="@+id/first_settings_setup_voice_male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/first_setup_margin_8"
            android:buttonTint="@color/primary_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_settings_setup_voice_female_linear_layout"
        android:layout_width="@dimen/first_setup_radio_button_linear_layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_setup_margin_32"
        android:layout_marginStart="@dimen/first_setup_margin_8"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/first_settings_setup_radio_button_background"
        app:layout_constraintTop_toBottomOf="@+id/first_settings_setup_voice_text_view"
        app:layout_constraintStart_toEndOf="@+id/first_settings_setup_voice_male_linear_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/first_settings_setup_voice_female_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/first_setup_margin_24"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_14"
            android:text="@string/settings_section_voice_female" />

        <RadioButton
            android:id="@+id/first_settings_setup_voice_female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/first_setup_margin_8"
            android:buttonTint="@color/primary_blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>